# MDWS

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
fxmarket-frontend/: index.html  package.json
mdanalytics/: Cargo.toml  Dockerfile
mdanalytics/src/: lib.rs  main.rs  tui.rs
mdanalytics/src/api/: mod.rs
mdanalytics/src/models/: mod.rs
mdanalytics/src/types/: mod.rs
mdanalytics/src/utils/: mod.rs
mdcore/: Cargo.toml
mdcore/src/: lib.rs
mdworkers/: Cargo.toml  Dockerfile  docker-compose.yaml
mdworkers/src/: lib.rs
mdworkers/src/config/: cfg.rs
mdworkers/src/services/: streams.rs
mdworkers/src/streams/: handlers.rs
mdworkers/src/types/: assetclass.rs  client.rs  message.rs  mod.rs
mdworkers/src/ws/: actors.rs  handlers.rs  mod.rs
mdws-fe/: .cta.json  README.md  env.d.ts  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
mdws-fe/src/: styles.css
mdws-fe/src/components/Header/: NavBar.tsx  NavLink.tsx  index.ts
mdws-fe/src/lib/: index.ts
mdws-fe/src/routes/: __root.tsx  index.tsx  subscriptions.tsx
mdws-fe/src/types/: event.ts  index.ts  misc.ts  subscriptions.ts  updates.ts
mdwstrading/: Cargo.toml
mdwstrading/src/: main.rs
mdwstrading/src/data/: indicators.rs  mod.rs
mdwstrading/src/portfolio/: mod.rs
ws-server/: Makefile  docker-compose.yaml  go.mod  go.sum
ws-server/cmd/: main.go
ws-server/internal/api/: marketfeed.go
ws-server/internal/core/: handlers.go  marketfeed.go  server.go  streams.go
ws-server/internal/models/: subscriptions.go
ws-server/utils/: utils.go
(+5 files in other folders)
