[package]
name = "mdanalytics"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = [] }
influxdb = { version = "0.8.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
plotters = "0.3.7"
polars = { version = "0.53.0", features = [
  "describe",
  "lazy",
  "ndarray",
  "object",
  "dtype-struct",
  "concat_str",
  "mode",
  "temporal",
  "strings",
  "dtype-datetime",
] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
